feat(fix bug chat_message)

--- a/a_rtchat/templates/a_rtchat/chat.html
+++ b/a_rtchat/templates/a_rtchat/chat.html
@@ -8,8 +8,8 @@
         </div>
         <div id='chat_container' class="overflow-y-auto grow">
             <ul id='chat_messages' class="flex flex-col justify-end gap-2 p-4">
-                {% for message in chat_messages reversed %}
-                {% include 'a_rtchat/chat_message.html' %}
+                {% for message in chat_messages %}
+                    {% include 'a_rtchat/chat_message.html' %}
                 {% endfor %}
             </ul>
         </div>
@@ -18,12 +18,32 @@
                 <form id="chat_message_form" class="w-full"
                     hx-post="{% url 'home' %}"
                     hx-target="#chat_messages"
-                    hx_swap="beforeend">
+                    hx-swap="beforeend"
+                      _="on htmx:afterRequest reset() me"
+                    >
                     {% csrf_token %}
                     {{form}}
                 </form>
             </div>
         </div>
+<!--        <div class="sticky bottom-0 z-10 p-2 bg-gray-800">-->
+<!--            <div class="flex items-center rounded-xl px-2 py-2">-->
+<!--                <form id="chat_message_form" class="w-full" method="POST">-->
+<!--                    {% csrf_token %}-->
+<!--                    {{form}}-->
+<!--                </form>-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 </wrapper>
+{% endblock %}
+
+{% block javascript %}
+<script>
+    function scrollToBottom(){
+        const container = document.querySelector('#chat_container')
+        container.scrollTop = container.scrollHeight;
+    }
+    scrollToBottom()
+</script>
 {% endblock %}
