--- a/a_rtchat/templates/a_rtchat/partials/chat_message_p.html
+++ b/a_rtchat/templates/a_rtchat/partials/chat_message_p.html
@@ -1,4 +1,4 @@
-
+<div id="chat_messages" hx-swap-oob="beforeend">
 <div class="fade-in-up">
 {% include 'a_rtchat/chat_message.html' %}
 </div>
@@ -14,3 +14,4 @@
 </style>
 
 <script>scrollToBottom()</script>
+</div>
